--- a/index.html
+++ b/index.html
@@ -353,6 +353,99 @@
                     </section>
                 </div>
             </section>
+
+            <section class="works">
+                <div class="container">
+                    <section class="works__inner">
+                        <div class="works__media">
+                            <figure class="works__logo-wrapper">
+                                <img
+                                    src="./assets/img/works-logo.svg"
+                                    alt="CeloBank"
+                                    class="works__logo"
+                                />
+                            </figure>
+
+                            <figure class="works__wrapper">
+                                <img
+                                    src="./assets/img/works-image.png"
+                                    alt="How It Works"
+                                    class="works__image"
+                                />
+                            </figure>
+
+                            <article class="works-congratulations">
+                                <figure
+                                    class="works-congratulations__icon-wrapper"
+                                >
+                                    <img
+                                        src="./assets/img/works-check.svg"
+                                        alt=""
+                                        class="works-congratulations__icon"
+                                    />
+                                </figure>
+
+                                <section class="works-congratulations__content">
+                                    <h4 class="works-congratulations__title">
+                                        Congratulations
+                                    </h4>
+
+                                    <p class="works-congratulations__desc">
+                                        Your account activated
+                                    </p>
+                                </section>
+                            </article>
+                        </div>
+
+                        <section class="works__content">
+                            <p class="introduce">Digital Smart Wallet</p>
+
+                            <h2 class="sub-title works__heading">
+                                How It Works
+                            </h2>
+
+                            <section class="works__list">
+                                <section class="works-item">
+                                    <h3 class="works-item__title">
+                                        1. Open a High Interest Checking account
+                                    </h3>
+
+                                    <p class="works-item__desc">
+                                        Fund your bank account with a minimum
+                                        balance of $100. Enroll in 3 minutes or
+                                        less!
+                                    </p>
+                                </section>
+
+                                <section class="works-item">
+                                    <h3 class="works-item__title">
+                                        2. 10 point-of-sale transactions each
+                                        Month that are at least $10 each.
+                                    </h3>
+
+                                    <p class="works-item__desc">
+                                        Be sure to use your rewards checking
+                                        account as often as possible in order to
+                                        accue APYI
+                                    </p>
+                                </section>
+
+                                <section class="works-item">
+                                    <h3 class="works-item__title">
+                                        3. Receive up to 5.50% APY
+                                    </h3>
+
+                                    <p class="works-item__desc">
+                                        The APY you earn will be based on your
+                                        account balance and satisfying the
+                                        transaction requirement.
+                                    </p>
+                                </section>
+                            </section>
+                        </section>
+                    </section>
+                </div>
+            </section>
         </main>
     </body>
 </html>
