--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
             rel="stylesheet"
         />
 
@@ -442,6 +442,226 @@
                                     </p>
                                 </section>
                             </section>
+                        </section>
+                    </section>
+                </div>
+            </section>
+
+            <section class="feature">
+                <div class="container">
+                    <section class="feature__inner">
+                        <section class="feature__content">
+                            <p class="introduce">Digital Smart Wallet</p>
+
+                            <h2 class="sub-title feature__heading">
+                                One Card For All Your Payments
+                            </h2>
+
+                            <p class="desc feature__desc">
+                                We bring together eveything that’s required to
+                                build websites and apps that accept payments and
+                                send payouts globally. We are the best platform.
+                            </p>
+
+                            <div class="feature__list">
+                                <h3 class="feature__item">Global Payments</h3>
+                                <h3 class="feature__item">
+                                    One-Click Purchase
+                                </h3>
+                                <h3 class="feature__item">Friendly Price</h3>
+                            </div>
+
+                            <a href="#!" class="btn feature__btn">
+                                Get Started
+                            </a>
+                        </section>
+
+                        <div class="feature__media">
+                            <article class="feature-send-money">
+                                <figure class="feature-send-money__wrapper">
+                                    <img
+                                        src="./assets/img/feature-icon-01.svg"
+                                        alt="Send Money"
+                                        class="feature-send-money__icon"
+                                    />
+                                </figure>
+
+                                <section class="feature-send-money__details">
+                                    <h4 class="feature-send-money__title">
+                                        Send Money
+                                    </h4>
+
+                                    <p class="feature-send-money__desc">
+                                        Airbnb Payment
+                                    </p>
+                                </section>
+
+                                <div class="feature-send-money__statistical">
+                                    <p class="feature-send-money__price">
+                                        - $600
+                                    </p>
+
+                                    <p class="feature-send-money__date">
+                                        Sep 23
+                                    </p>
+                                </div>
+                            </article>
+
+                            <article class="card feature__card">
+                                <figure class="card__decor card__decor--top">
+                                    <img
+                                        src="./assets/img/feature-card-decor-01.svg"
+                                        alt=""
+                                    />
+                                </figure>
+
+                                <div class="card__top">
+                                    <p class="card__heading">Main Balance</p>
+
+                                    <div class="card__circles">
+                                        <div class="card__circle"></div>
+                                        <div class="card__circle"></div>
+                                    </div>
+                                </div>
+
+                                <p class="card__price">$78,355.17</p>
+
+                                <div class="card__bottom">
+                                    <div class="card__valid-thur">
+                                        <p class="card__title">VALID THUR</p>
+
+                                        <p class="card__info">08/22</p>
+                                    </div>
+
+                                    <div class="card__card-holder">
+                                        <p class="card__title">CARD HOLDER</p>
+
+                                        <p class="card__info">
+                                            Md Moshqur Alam
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <figure class="card__decor card__decor--bottom">
+                                    <img
+                                        src="./assets/img/feature-card-decor-02.svg"
+                                        alt=""
+                                    />
+                                </figure>
+                            </article>
+
+                            <div class="feature-income">
+                                <figure class="feature-income__wrapper">
+                                    <img
+                                        src="./assets/img/feature-icon-02.svg"
+                                        alt="Income"
+                                        class="feature-income__image"
+                                    />
+                                </figure>
+
+                                <h4 class="feature-income__title">Income</h4>
+
+                                <p class="feature-income__price">$1250</p>
+                            </div>
+                        </div>
+
+                        <div class="feature__media">
+                            <figure class="feature__wrapper">
+                                <img
+                                    src="./assets/img/feature-image.png"
+                                    alt=""
+                                    class="feature__image"
+                                />
+                            </figure>
+
+                            <article class="feature-payment">
+                                <h4 class="feature-payment__title">
+                                    Choose payment method:
+                                </h4>
+
+                                <div class="feature-payment__method">
+                                    <button class="feature-payment__btn">
+                                        <img
+                                            src="./assets/img/feature-icon-03.svg"
+                                            alt=""
+                                            class="feature-payment__item"
+                                        />
+                                    </button>
+
+                                    <button class="feature-payment__btn">
+                                        <img
+                                            src="./assets/img/feature-icon-04.svg"
+                                            alt=""
+                                            class="feature-payment__item"
+                                        />
+                                    </button>
+
+                                    <button class="feature-payment__btn">
+                                        <img
+                                            src="./assets/img/feature-icon-05.svg"
+                                            alt=""
+                                            class="feature-payment__item"
+                                        />
+                                    </button>
+
+                                    <button class="feature-payment__btn">
+                                        <img
+                                            src="./assets/img/feature-icon-06.svg"
+                                            alt=""
+                                            class="feature-payment__item"
+                                        />
+                                    </button>
+
+                                    <button class="feature-payment__btn">
+                                        <img
+                                            src="./assets/img/feature-icon-07.svg"
+                                            alt=""
+                                            class="feature-payment__item"
+                                        />
+                                    </button>
+                                    <button
+                                        class="feature-payment__btn"
+                                    ></button>
+                                </div>
+                            </article>
+
+                            <figure class="feature-payment__wrapper">
+                                <img
+                                    src="./assets/img/feature-icon-08.svg"
+                                    alt=""
+                                    class="feature-payment__icon"
+                                />
+                            </figure>
+                        </div>
+
+                        <section class="feature__content">
+                            <p class="introduce">Digital Smart Wallet</p>
+
+                            <h2 class="sub-title feature__heading">
+                                Transfer and Deposite Your Money Anytime
+                            </h2>
+
+                            <p class="desc feature__desc">
+                                We bring together eveything that’s required to
+                                build websites and apps that accept payments and
+                                send payouts globally. We are the best platform.
+                            </p>
+
+                            <div class="feature__list">
+                                <h3 class="feature__item">Powerfull App</h3>
+
+                                <h3 class="feature__item">
+                                    Transparency And Speed
+                                </h3>
+
+                                <h3 class="feature__item">
+                                    Multiple Use Capabilities
+                                </h3>
+                            </div>
+
+                            <a href="#!" class="btn feature__btn"
+                                >Get Started</a
+                            >
                         </section>
                     </section>
                 </div>
