--- a/index.html
+++ b/index.html
@@ -666,6 +666,83 @@
                     </section>
                 </div>
             </section>
+
+            <section class="review">
+                <div class="container">
+                    <p class="introduce review__introduce">Our Testimonial</p>
+
+                    <h2 class="sub-title review__heading">What Clients Says</h2>
+
+                    <p class="desc review__desc">
+                        Read what clients says about us and about our online
+                        banking services that may inspire you
+                    </p>
+
+                    <div class="review__list">
+                        <div class="review__items">
+                            <article class="review-item">
+                                <blockquote class="review-item__quote">
+                                    Fantastic platform for online banking. The
+                                    best online banking platform I have used.
+                                    Payments, loans, and money transfers have
+                                    never been so much easier before. I am very
+                                    much happy about this great online bank.
+                                </blockquote>
+
+                                <section class="review-item__info">
+                                    <figure class="review-item__wrapper">
+                                        <img
+                                            src="./assets/img/review-avatar-01.png"
+                                            alt="Alastair Cook"
+                                            class="review-item__avatar"
+                                        />
+                                    </figure>
+
+                                    <h3 class="review-item__name">
+                                        Alastair Cook
+                                    </h3>
+
+                                    <p class="review-item__desc">Businessmen</p>
+                                </section>
+                            </article>
+
+                            <article class="review-item">
+                                <blockquote class="review-item__quote">
+                                    Fantastic platform for online banking. The
+                                    best online banking platform I have used.
+                                    Payments, loans, and money transfers have
+                                    never been so much easier before. I am very
+                                    much happy about this great online bank.
+                                </blockquote>
+
+                                <section class="review-item__info">
+                                    <figure class="review-item__wrapper">
+                                        <img
+                                            src="./assets/img/review-avatar-02.png"
+                                            alt="Alastair Foaks"
+                                            class="review-item__avatar"
+                                        />
+                                    </figure>
+
+                                    <h3 class="review-item__name">
+                                        Alastair Foaks
+                                    </h3>
+
+                                    <p class="review-item__desc">Businessmen</p>
+                                </section>
+                            </article>
+                        </div>
+                    </div>
+
+                    <div class="review__rectangles">
+                        <div
+                            class="review__rectangle review__rectangle--active"
+                        ></div>
+                        <div class="review__rectangle"></div>
+                        <div class="review__rectangle"></div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
