--- a/index.html
+++ b/index.html
@@ -743,6 +743,128 @@
                     </div>
                 </div>
             </section>
+
+            <section class="blog">
+                <div class="container">
+                    <p class="introduce blog__introduce">Our Blog</p>
+
+                    <section class="blog__top">
+                        <section class="blog__information">
+                            <h2 class="sub-title">Get The Updates</h2>
+
+                            <p class="desc blog__desc">
+                                Read our blog for the regular updates about us
+                                and about our online banking services that may
+                                inspire you
+                            </p>
+                        </section>
+
+                        <a href="#!" class="btn blog__btn">Read All</a>
+                    </section>
+
+                    <section class="blog__content">
+                        <article class="blog-item">
+                            <figure class="blog-item__media">
+                                <img
+                                    src="./assets/img/blog-image-01.jpg"
+                                    alt="Online bank is the best and secure way to save in the future..."
+                                    class="blog-item__image"
+                                />
+                            </figure>
+
+                            <section class="blog-item__content">
+                                <p class="blog-item__date">July 03, 2022</p>
+
+                                <a href="#!" class="blog-item__title">
+                                    <h3>
+                                        Online bank is the best and secure way
+                                        to save in the future...
+                                    </h3>
+                                </a>
+
+                                <a href="#!" class="blog-item__link">
+                                    Read Blog
+                                </a>
+                            </section>
+                        </article>
+
+                        <article class="blog-item">
+                            <figure class="blog-item__media">
+                                <img
+                                    src="./assets/img/blog-image-02.jpg"
+                                    alt="Why do you need to open a bank account in online.."
+                                    class="blog-item__image"
+                                />
+                            </figure>
+
+                            <section class="blog-item__content">
+                                <p class="blog-item__date">July 03, 2022</p>
+
+                                <a href="#!" class="blog-item__title">
+                                    <h3>
+                                        Why do you need to open a bank account
+                                        in online..
+                                    </h3>
+                                </a>
+
+                                <a href="#!" class="blog-item__link">
+                                    Read Blog
+                                </a>
+                            </section>
+                        </article>
+
+                        <article class="blog-item">
+                            <figure class="blog-item__media">
+                                <img
+                                    src="./assets/img/blog-image-03.jpg"
+                                    alt="The benefits that we get from credit card at anytime..."
+                                    class="blog-item__image"
+                                />
+                            </figure>
+
+                            <section class="blog-item__content">
+                                <p class="blog-item__date">July 03, 2022</p>
+
+                                <a href="#!" class="blog-item__title">
+                                    <h3>
+                                        The benefits that we get from credit
+                                        card at anytime...
+                                    </h3>
+                                </a>
+
+                                <a href="#!" class="blog-item__link">
+                                    Read Blog
+                                </a>
+                            </section>
+                        </article>
+
+                        <article class="blog-item">
+                            <figure class="blog-item__media">
+                                <img
+                                    src="./assets/img/blog-image-04.jpg"
+                                    alt="How to manage your money in online in this busy days..."
+                                    class="blog-item__image"
+                                />
+                            </figure>
+
+                            <section class="blog-item__content">
+                                <p class="blog-item__date">July 03, 2022</p>
+
+                                <a href="#!" class="blog-item__title">
+                                    <h3>
+                                        How to manage your money in online in
+                                        this busy days...
+                                    </h3>
+                                </a>
+
+                                <a href="#!" class="blog-item__link">
+                                    Read Blog
+                                </a>
+                            </section>
+                        </article>
+                    </section>
+                </div>
+            </section>
         </main>
     </body>
 </html>
