--- a/index.html
+++ b/index.html
@@ -865,6 +865,63 @@
                     </section>
                 </div>
             </section>
+
+            <section class="download">
+                <div class="container">
+                    <section class="download__inner">
+                        <p class="introduce download__introduce">Our App</p>
+
+                        <h2 class="sub-title download__heading">
+                            Download the Apps
+                        </h2>
+
+                        <p class="desc download__desc">
+                            Download our mobile apps and get started today with
+                            a special online bank and move faster
+                        </p>
+
+                        <div class="download__store">
+                            <a href="#!" class="download__item">
+                                <img
+                                    src="./assets/img/download-icon-01.svg"
+                                    alt="Google Play"
+                                />
+                            </a>
+
+                            <a href="#!" class="download__item">
+                                <img
+                                    src="./assets/img/download-icon-02.svg"
+                                    alt="App Store"
+                                />
+                            </a>
+                        </div>
+
+                        <img
+                            src="./assets/img/download-icon-03.svg"
+                            alt=""
+                            class="download__icon"
+                        />
+
+                        <img
+                            src="./assets/img/download-icon-03.svg"
+                            alt=""
+                            class="download__icon"
+                        />
+
+                        <img
+                            src="./assets/img/download-icon-03.svg"
+                            alt=""
+                            class="download__icon"
+                        />
+
+                        <img
+                            src="./assets/img/download-icon-03.svg"
+                            alt=""
+                            class="download__icon"
+                        />
+                    </section>
+                </div>
+            </section>
         </main>
     </body>
 </html>
