--- a/index.html
+++ b/index.html
@@ -923,5 +923,100 @@
                 </div>
             </section>
         </main>
+
+        <footer class="footer">
+            <div class="container">
+                <section class="footer__inner">
+                    <div class="footer__column">
+                        <img
+                            src="./assets/img/logo.svg"
+                            alt="CeloBank"
+                            class="footer__logo"
+                        />
+                    </div>
+
+                    <div class="footer__column">
+                        <h3 class="footer__heading">Sitemap</h3>
+
+                        <ul class="footer__list">
+                            <li class="footer__item">
+                                <a href="#!" class="footer__link">Home</a>
+                            </li>
+
+                            <li class="footer__item">
+                                <a href="#!" class="footer__link">Abouts</a>
+                            </li>
+
+                            <li class="footer__item">
+                                <a href="#!" class="footer__link">Growers</a>
+                            </li>
+
+                            <li class="footer__item">
+                                <a href="#!" class="footer__link">Merchants</a>
+                            </li>
+
+                            <li class="footer__item">
+                                <a href="#!" class="footer__link">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="footer__column">
+                        <h3 class="footer__heading">Socials</h3>
+
+                        <ul class="footer__list">
+                            <li class="footer__item">
+                                <a href="#!" class="footer__link">Facebook</a>
+                            </li>
+
+                            <li class="footer__item">
+                                <a href="#!" class="footer__link">Linkedin</a>
+                            </li>
+
+                            <li class="footer__item">
+                                <a href="#!" class="footer__link">Instagram</a>
+                            </li>
+
+                            <li class="footer__item">
+                                <a href="#!" class="footer__link">Twitter</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="footer__column">
+                        <h3 class="footer__heading">Head Office</h3>
+
+                        <p class="desc footer__desc">
+                            Xilliams Corner Wine © 2017. 1112 A Market St # Ste
+                            B22, Charlottesville, CA 45565
+                        </p>
+
+                        <h3 class="footer__heading">News letter</h3>
+
+                        <form action="" class="footer__form">
+                            <input
+                                type="email"
+                                name="email"
+                                id="email"
+                                class="footer__email"
+                                placeholder="Email address..."
+                            />
+
+                            <button class="btn footer__btn">Subscribe</button>
+                        </form>
+                    </div>
+                </section>
+
+                <div class="footer__info">
+                    <p class="footer__mail">email@gmail.com</p>
+
+                    <p class="footer__tel">(123) 456-7890</p>
+                </div>
+            </div>
+
+            <div class="footer__copyright">
+                © 2020 Ligft Media All rights reserved.
+            </div>
+        </footer>
     </body>
 </html>
