--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
                 </div>
             </section>
 
-            <section class="download" data-aos="flip-down">
+            <section class="download" data-aos="zoom-in">
                 <div class="container">
                     <section class="download__inner">
                         <p class="introduce download__introduce">Our App</p>
